# PVI-DSO-SIM

./: .gitignore  CMakeLists.txt  README.md  config.yaml
main/: gener_alldata.cpp
python_tool/: draw_points.py  plot_simulate.py
src/: evaluation.cc  evaluation.hpp  feature.h  imu.cpp  imu.h  linearCoplanarError.cpp  linearCoplanarError.h  param.cpp  param.h  random.cpp  random.h  utilities.cpp  utilities.h  utility.hpp  viewer.cpp  viewer.h
src/coplanar/: plane_local_parameterization.hpp  point_projection_factor.cc  point_projection_factor.hpp  pose_local_parameterization.cc  pose_local_parameterization.hpp
